--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ FIREBASE_STORAGE_BUCKET="cooleath-official-e-commerce.appspot.com"
 FIREBASE_MESSAGING_SENDER_ID="148980427183"
 FIREBASE_APP_ID="1:148980427183:web:cbeaf956fc8e27b575275a"
 FIREBASE_MEASUREMENT_ID="G-4HZYNYY3S8"
+
+NEXTAUTH_SECRET="57)j71IdM5,o=S9."
